# DRR-renderer

./: .gitignore  CMakeLists.txt  README.md  README.md.save
readNifti/: CMakeLists.txt  main.cpp  niftireader.cpp  niftireader.h
readNifti/include/: niftireader.h
src/: DRRgenerator.cpp  DRRgenerator.h  main.cpp
